More chart stuff

--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -287,8 +287,8 @@
     <section class="right-half1" ng-if="graphShowing">
         <canvas height="500" width="800" class="chart chart-line" chart-data="data"
                 chart-labels="labels" chart-series="series" chart-options="options"
-                chart-dataset-override="datasetOverride" chart-click="onClick"
-        </canvas>
+                chart-dataset-override="datasetOverride" chart-click="onClick" width="700" height="400"
+        </canvas
 
 
 
