--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -222,6 +222,7 @@
 
                     </div>
                     <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllZeros()" value="Email all with missing assignments"/>
+                    <input type="button" class="btn btn-default btn-md" ng-click="sendEmailForAllHighAverages()" value="Email all with averages over 95"/>
 
                 </td>
 
