--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -182,12 +182,12 @@
                     <span class="glyphicon glyphicon-envelope" > </span> Email
                 </button></td>
 
-                <td ng-repeat="studentAssignment in studentContainer.studentAssignments"> <input type="number" ng-model="studentAssignment.grade" ng-keyup="storeGrades"> </td>
+                <td ng-repeat="studentAssignment in studentContainer.studentAssignments"> <input type="number" style="width: 45px" ng-model="studentAssignment.grade" ng-keyup="storeGrades"> </td>
             </tr>
 
-            <tr>
+            <!--<tr>-->
 
-            </tr>
+            <!--</tr>-->
 
             <tr>
                 <td> <button type="button" class="btn btn-default btn-lg"  data-toggle="modal" data-target="#myModals">Add Student</button>
