--- a/src/main/resources/static/css/styles3.css
+++ b/src/main/resources/static/css/styles3.css
@@ -60,28 +60,12 @@ border-collapse: separate;
 	width: 150%; height: 150%
 }
 
-#square {
+.table-responsive {
     -webkit-box-ordinal-group: 1;   /* OLD - iOS 6-, Safari 3.1-6 */
      -moz-box-ordinal-group: 1;      /* OLD - Firefox 19- */
      -ms-flex-order: 1;              /* TWEENER - IE 10 */
      -webkit-order: 1;               /* NEW - Chrome */
      order: 1;                       /* NEW, Spec - Opera 12.1, Firefox 20+ */
-
-     width: 100%;                     /* No flex here, other cols take up remaining space */
-
-     -moz-box-flex: 1;               /* Without this, Firefox 19- expands to widest paragraph, overrides width */
-
-     background: white;
-
-
-
-}
-#right{
-    -webkit-box-ordinal-group: 2;   /* OLD - iOS 6-, Safari 3.1-6 */
-     -moz-box-ordinal-group: 2;      /* OLD - Firefox 19- */
-     -ms-flex-order: 2;              /* TWEENER - IE 10 */
-     -webkit-order: 2;               /* NEW - Chrome */
-     order: 2;                       /* NEW, Spec - Opera 12.1, Firefox 20+ */
 
      width: 20%;                     /* No flex here, other cols take up remaining space */
 
@@ -89,17 +73,22 @@ border-collapse: separate;
 
      background: white;
 
-     position:relative;
-
-     right: .5%;
-
-
 
 
 }
+.right-half1 {
+    -webkit-box-ordinal-group: 2;   /* OLD - iOS 6-, Safari 3.1-6 */
+     -moz-box-ordinal-group: 2;      /* OLD - Firefox 19- */
+     -ms-flex-order: 2;              /* TWEENER - IE 10 */
+     -webkit-order: 2;               /* NEW - Chrome */
+     order: 2;                       /* NEW, Spec - Opera 12.1, Firefox 20+ */
 
-#dropdown{
-    position: rl
+     width: 60%;                     /* No flex here, other cols take up remaining space */
+
+     -moz-box-flex: 1;               /* Without this, Firefox 19- expands to widest paragraph, overrides width */
+
+     background: white;
+
 
 }
 
