--- a/src/main/resources/templates/gradebook.html
+++ b/src/main/resources/templates/gradebook.html
@@ -118,6 +118,7 @@
         <table class="table table-bordered">
             <tr>
                 <td>
+                    <div ng-if="gradebookContainer.studentContainers[0] != undefined">
                     <button name="but" type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Add Assignment</button>
 
                     <!-- Modal -->
@@ -126,7 +127,7 @@
 
                             <!-- Modal content-->
                             <div class="modal-content">
-                                <div class="modal-header">
+                                <div class="modal-header" ng-if="gradebookContainer.studentContainers[0] != undefined">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     <h4 class="modal-title">Add assignment</h4>
                                 </div>
@@ -149,8 +150,7 @@
                         </div>
 
                     </div>
-
-
+                    </div>
 
                 </td>
             </tr>
